+ increase upload file size + add websocket alarm (alarm to 1mn of inactivity) + add websocket logs
