# src/routes.ts
@@ -18,6 +18,8 @@ import { DigitaltwinController } from './controllers/digitalTwin.controller';
 import { PortofolioController } from './controllers/portofolio.controller';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 import { UserProfileController } from './controllers/userProfile.controller';
+// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+import { WebsocketLogsController } from './controllers/websocketLogs.controller';
 import { expressAuthentication } from './security/authentication';
 // @ts-ignore - no great way to install types from subpackage
 const promiseAny = require('promise.any');
@@ -2973,6 +2975,31 @@ export function RegisterRoutes(app: express.Router) {
 
 
               const promise = controller.unauthorizeToAccessBosApp.apply(controller, validatedArgs as any);
+              promiseHandler(controller, promise, response, undefined, next);
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.get('/api/v1/pam/websocket/get_logs',
+            authenticateMiddleware([{"admin":[]}]),
+            ...(fetchMiddlewares<RequestHandler>(WebsocketLogsController)),
+            ...(fetchMiddlewares<RequestHandler>(WebsocketLogsController.prototype.getWebsocketLogs)),
+
+            function WebsocketLogsController_getWebsocketLogs(request: any, response: any, next: any) {
+            const args = {
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = getValidatedArgs(args, request, response);
+
+                const controller = new WebsocketLogsController();
+
+
+              const promise = controller.getWebsocketLogs.apply(controller, validatedArgs as any);
               promiseHandler(controller, promise, response, undefined, next);
             } catch (err) {
                 return next(err);
